# Haskell_Recipes

./: .gitignore  Haskell_99.cabal  README.md  package.yaml  stack.yaml
data/: todo.txt
docs/: notes.md
src/: Main.hs  Q10.hs  Q20.hs  Q30.hs
src/GreatGood/: Bytestring.hs  Exceptions.hs  FileStream.hs  GreatGood.hs  InputOutput.hs  Monad.hs  Monoid.hs  Problems.hs  Randomness.hs  TodoList.hs
src/Problems_99/: Q10.hs  Q20.hs  Q30.hs  Q40.hs  Q50.hs
src/RealWorld/: DiffList.hs  GrahamScan.hs  Hello.hs  PrettyPrint.hs  Show.hs  SimpleJSON.hs  SimpleState.hs
