name:                 haskell-99problems
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Anton Logunov
maintainer:           antoshkaplus@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Haskell_99
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, random
  hs-source-dirs:       src
  default-language:     Haskell2010
